# visast-frontend

./: .gitignore  README.md  elm.json  package-lock.json  package.json
frontend/: Procfile  elm.json
frontend/public/: index.html
frontend/src/: Decode.elm  Encode.elm  Main.elm  Model.elm  Request.elm  Tree.elm  main.css
frontend/src/Helpers/: Width.elm
haskell-backend/: Procfile  Setup.hs  haskell-backend.cabal  package.yaml  stack.yaml
haskell-backend/src/: App.hs  Evaluator.hs  Model.hs  Types.hs
haskell-backend/src/TestLanguage/: Convert.hs  Evaluator.hs  Parser.hs  TestMain.hs  Types.hs
public/: index.html
src/: Decode.elm  Encode.elm  Main.elm  Model.elm  Request.elm  Route.elm  Step.elm  Tree.elm  main.css
src/Helpers/: View.elm  Width.elm
src/Page/: Advanced.elm  Easy.elm  Index.elm
src/Request/: Decode.elm  Encode.elm  Request.elm
src/Tree/: Step.elm  Tree.elm
