name:                haskell-backend
version:             0.0.0.0
author:              David Lettier
copyright:           2016 David Lettier
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database
                     , Model
                     , View
                     , Controller
  ghc-options:         -ddump-minimal-imports -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , snap == 0.14.*
                     , text
                     , hashmap
                     , aeson == 0.8.1.1
                     , data-default-class
                     , monad-control
                     , monad-logger
                     , resourcet
                     , bytestring
                     , transformers
                     , persistent
                     , persistent-sqlite
                     , persistent-template
  default-language:    Haskell2010

executable haskell-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-minimal-imports -fwarn-unused-imports
  build-depends:       base
                     , haskell-backend
                     , snap == 0.14.*
  default-language:    Haskell2010